<resources>
    <string name="app_name">Hotel Adn</string>
    <string name="username">Usuario:</string>
    <string name="password">Password:</string>
    <string name="submit">Entran</string>
    <string name="vacio"></string>
    <string name="modo_habitacion">Habitación</string>
    <string name="modo_admin">Administrar</string>
    <string name="title_activity_setting">SettingActivity</string>

    <string name="message_username_invalid">Usuario invalido</string>
    <string name="message_password_invalid">Passwoord invalido</string>

    <string name="pref_title_general">Hotel ADN - Config</string>
    <string name="pref_title_habitacion">Seleccione Habitación</string>
    <string name="pref_title_secret_key">Llave Secreta</string>

    <string name="title_activity_solicitud">SolicitudActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_logout">Salir</string>

    <string name="sol_list">Solicitudes</string>
    <string name="sol_detail">Detalle Solicitud</string>
    <string name="sol_habitacion">Habitación</string>
    <string name="sol_categoria">Categoria</string>
    <string name="sol_servicio">Servicio</string>
    <string name="sol_comentario">Comentario</string>
    <string name="sol_fecha">Fecha</string>
    <string name="sol_estado">Estado</string>
    <string name="sol_chage_state">-</string>
    <string name="sol_view_comments">[~]</string>
    <string name="sol_new">+</string>
    <string name="sol_new_save">Registrar Solicitud</string>

    <string-array name="sol_list_state_values">
        <item>SOLICITADA</item>
        <item>ENPROCESO</item>
        <item>PENDIENTE</item>
        <item>ATENDIDA</item>
        <item>CANCELADA</item>
    </string-array>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="action_settings">Settings</string>

    <string name="com_empleado">Empleado</string>
    <string name="com_title">Comentarios</string>
    <string name="com_comentar">Comentar</string>
    <string name="com_escribir_comentario">Escribir comentario</string>
    <string name="title_activity_solicitud_new">SolicitudNewActivity</string>
</resources>
