<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".SolicitudServicioNuevaFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@android:id/empty"
            android:layout_margin="5dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sol_detail"/>

        <TextView
            android:layout_margin="6dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sol_habitacion"
            android:id="@+id/txt_habitacion" />

        <TextView
            android:layout_margin="6dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sol_servicio"
            android:id="@+id/txt_servicio" />

        <TextView
            android:layout_margin="6dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sol_fecha"
            android:id="@+id/txt_fecha" />

        <TextView
            android:layout_margin="6dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sol_estado"
            android:id="@+id/txt_estado" />

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_margin="3dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sol_view_comments"
                android:id="@+id/btn_view_comments" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_margin="3dip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sol_chage_state"
                android:id="@+id/btn_change_state" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
