<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical" >

    <Switch
        android:id="@+id/switch_modo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dip"
        android:textOff="@string/modo_admin"
        android:textOn="@string/modo_habitacion"
        android:checked="true" />

    <LinearLayout
        android:id="@+id/login"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dip"
            android:layout_margin="8dip"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:padding="8dip"
            android:layout_margin="8dip"
            android:singleLine="true" />

        <TextView
            android:id="@+id/label_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dip"
            android:layout_margin="8dip"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="8dip"
            android:layout_margin="8dip"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_habitacion"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_habitacion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dip"
            android:layout_margin="8dip"
            android:text="@string/vacio" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dip"
        android:text="@string/submit" />

</LinearLayout>